--- a/users/overview.mdx
+++ b/users/overview.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Overview"
 description: "Learn how to manage users to improve moderation"
 ---
 
-## Overview
+## Introduction
 
 Enabling user management in Moderation API solves some of the most common moderation challenges for community platforms.
 
