--- a/_snippets/openapi.mdx
+++ b/_snippets/openapi.mdx
@@ -7,7 +7,7 @@ If your preferred language is not supported by our official SDKs, you can use th
 <Card
   title="OpenAPI Specification "
   icon="brackets-curly"
-  href="https://moderationapi.com/api/v1/openapi.json"
+  href="https://api.moderationapi.com/v1/openapi.json"
 >
   Access the OpenAPI specification for the Moderation API.
 </Card>
