--- a/_snippets/prerequisites.mdx
+++ b/_snippets/prerequisites.mdx
@@ -2,4 +2,4 @@
 
 You'll need an API key to use the Moderation API. To get one, you'll need to create a project.
 
-- [Create a project](https://moderationapi.com/app)
+- [Create a project](https://dash.moderationapi.com)
