--- a/account/adding-team-members.mdx
+++ b/account/adding-team-members.mdx
@@ -3,7 +3,7 @@ title: "Manage team"
 description: "How to add team members to your organization"
 ---
 
-Visit the [team management page](https://moderationapi.com/app/team) to add team members to your organization.
+Visit the [team management page](https://dash.moderationapi.com/team) to add team members to your organization.
 
 You can add team members by entering their email address. They will receive an email invitation to join your organization.
 
