--- a/account/quota-usage.mdx
+++ b/account/quota-usage.mdx
@@ -24,7 +24,7 @@ If you upgrade to a higher plan, your quota will immediately be reset to the inc
 <Card
   title="Upgrade to a higher plan"
   icon="fire"
-  href="https://moderationapi.com/app/upgrade"
+  href="https://dash.moderationapi.com/upgrade"
 >
   Upgrade to a higher plan in the dashboard here.
 </Card>
@@ -40,7 +40,7 @@ If you enable pay-as-you-go, you will be billed for the quota you use on top of 
 <Card
   title="Enable Pay-as-you-go"
   icon="rocket"
-  href="https://moderationapi.com/app/billing"
+  href="https://dash.moderationapi.com/billing"
 >
   Set up pay-as-you-go limits in the dashboard here.
 </Card>
@@ -60,7 +60,7 @@ You can view your quota usage in the dashboard.
 <Card
   title="View quota usage"
   icon="chart-bar"
-  href="https://moderationapi.com/app/billing/usage"
+  href="https://dash.moderationapi.com/billing/usage"
 >
   View your quota usage in the dashboard here.
 </Card>
@@ -71,7 +71,7 @@ You can view your quota usage in the dashboard.
 
 Your quota resets at the beginning of your billing cycle.
 
-For example, if you have a monthly plan, your quota will reset on the day that you started your plan. You can also see the start date of your billing cycle in the dashboard on the [billing page](https://moderationapi.com/app/billing).
+For example, if you have a monthly plan, your quota will reset on the day that you started your plan. You can also see the start date of your billing cycle in the dashboard on the [billing page](https://dash.moderationapi.com/billing).
 
 ## How is the quota usage calculated?
 
