--- a/ai-agents/creating-an-agent.mdx
+++ b/ai-agents/creating-an-agent.mdx
@@ -33,7 +33,7 @@ If you need help creating AI agents please [send us a message](https://moderatio
 
 ## Get started
 
-Head over to the [Model Studio](https://moderationapi.com/app/models) in your dashboard and press the "Add new agent" button.
+Head over to the [Model Studio](https://dash.moderationapi.com/models) in your dashboard and press the "Add new agent" button.
 
 Here you'll give your agent a name and describe what its job is. These fields are not used for moderation, but are useful for you to identify the agent's purpose.
 
