--- a/content-moderation/creating-projects.mdx
+++ b/content-moderation/creating-projects.mdx
@@ -7,7 +7,7 @@ description: "Learn to configure a project for your use-case"
   Depending on your plan your might have a limited number of projects available.
 </Note>
 
-You can create a new project from the [projects page](https://moderationapi.com/app/projects) on your dashboard.<br></br>
+You can create a new project from the [projects page](https://dash.moderationapi.com/projects) on your dashboard.<br></br>
 
 We recommend to create a project for each part of your application. For example, if you have a chat application, you can create a project for the chat messages and another project for the user profiles. <br></br>
 
