--- a/content-moderation/submit-content.mdx
+++ b/content-moderation/submit-content.mdx
@@ -57,7 +57,7 @@ if (imageAnalysis.flagged) {
 ```
 
 ```javascript Fetch example
-const data = await fetch("https://moderationapi.com/api/v1/moderate/text", {
+const data = await fetch("https://api.moderationapi.com/v1/moderate/text", {
   method: "POST",
   headers: {
     Authorization: `Bearer ${API_KEY}`,
