--- a/guides/creating-a-custom-model.mdx
+++ b/guides/creating-a-custom-model.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Creating a custom model"
 description: "Learn how to create a custom model using Moderation API"
 ---
 
-Head over to the Model Studio and press the models tab. Here you can create a new custom model. [Model Studio](https://moderationapi.com/app/models).
+Head over to the Model Studio and press the models tab. Here you can create a new custom model. [Model Studio](https://dash.moderationapi.com/models).
 
 ## 1. Select your type of model
 
