--- a/guides/user-flagged-content.mdx
+++ b/guides/user-flagged-content.mdx
@@ -64,7 +64,7 @@ We will keep the flagging thresholds at their default values for now.
 
 ### Create a Reporting Action
 
-Navigate to [your actions](https://moderationapi.com/app/moderation/actions) to create a new action.
+Navigate to [your actions](https://dash.moderationapi.com/moderation/actions) to create a new action.
 
 1. Create an action named `Report Profile` that will be used to report user profiles.
 2. Since this action will only be invoked by our application code, select **"Hide action from dashboard"** to prevent it from appearing in any queues.
