--- a/quickstart/dotnet.mdx
+++ b/quickstart/dotnet.mdx
@@ -29,7 +29,7 @@ Install-Package System.Text.Json
 
 ## 2. Submit content
 
-Grab the API key from your [project](https://moderationapi.com/app) and begin submitting text, images, or other media to your project for moderation.
+Grab the API key from your [project](https://dash.moderationapi.com) and begin submitting text, images, or other media to your project for moderation.
 
 <CodeGroup>
 
@@ -43,7 +43,7 @@ using System.Threading.Tasks;
 public class ModerationClient
 {
     private readonly HttpClient _httpClient;
-    private const string BaseUrl = "https://moderationapi.com/api/v1";
+    private const string BaseUrl = "https://api.moderationapi.com/v1";
 
     public ModerationClient(string apiKey)
     {
@@ -111,7 +111,7 @@ using System.Threading.Tasks;
 public class ModerationClient
 {
     private readonly HttpClient _httpClient;
-    private const string BaseUrl = "https://moderationapi.com/api/v1";
+    private const string BaseUrl = "https://api.moderationapi.com/v1";
 
     public ModerationClient(string apiKey)
     {
@@ -179,7 +179,7 @@ using System.Threading.Tasks;
 public class ModerationClient
 {
     private readonly HttpClient _httpClient;
-    private const string BaseUrl = "https://moderationapi.com/api/v1";
+    private const string BaseUrl = "https://api.moderationapi.com/v1";
 
     public ModerationClient(string apiKey)
     {
