--- a/quickstart/go.mdx
+++ b/quickstart/go.mdx
@@ -17,7 +17,7 @@ We currently don't have an official SDK for Go, but you can use the [OpenAPI Gen
 
 ## 2. Submit content
 
-Grab the API key from your [project](https://moderationapi.com/app) and begin submitting text, images, or other media to your project for moderation.
+Grab the API key from your [project](https://dash.moderationapi.com) and begin submitting text, images, or other media to your project for moderation.
 
 <CodeGroup>
 
@@ -35,7 +35,7 @@ import (
 func main() {
     // Configure the client
     apiKey := "your-api-key" // Replace with your API key
-    baseURL := "https://moderationapi.com/api/v1"
+    baseURL := "https://api.moderationapi.com/v1"
 
     // Prepare request body
     requestBody, err := json.Marshal(map[string]interface{}{
@@ -104,7 +104,7 @@ import (
 func main() {
     // Configure the client
     apiKey := "your-api-key" // Replace with your API key
-    baseURL := "https://moderationapi.com/api/v1"
+    baseURL := "https://api.moderationapi.com/v1"
 
     // Prepare request body
     requestBody, err := json.Marshal(map[string]interface{}{
@@ -173,7 +173,7 @@ import (
 func main() {
     // Configure the client
     apiKey := "your-api-key" // Replace with your API key
-    baseURL := "https://moderationapi.com/api/v1"
+    baseURL := "https://api.moderationapi.com/v1"
 
     // Prepare request body
     requestBody, err := json.Marshal(map[string]interface{}{
