--- a/quickstart/nodejs.mdx
+++ b/quickstart/nodejs.mdx
@@ -31,7 +31,7 @@ pnpm add @moderation-api/sdk
 
 ## 2. Submit content
 
-Grab the API key from your [project](https://moderationapi.com/app) and begin submitting text, images, or other media to your project for moderation.
+Grab the API key from your [project](https://dash.moderationapi.com) and begin submitting text, images, or other media to your project for moderation.
 
 <CodeGroup>
 
