--- a/quickstart/python.mdx
+++ b/quickstart/python.mdx
@@ -17,7 +17,7 @@ We currently don't have an official SDK for Python, but you can use the [OpenAPI
 
 ## 2. Submit content
 
-Grab the API key from your [project](https://moderationapi.com/app) and begin submitting text, images, or other media to your project for moderation.
+Grab the API key from your [project](https://dash.moderationapi.com) and begin submitting text, images, or other media to your project for moderation.
 
 <CodeGroup>
 
@@ -26,7 +26,7 @@ import requests
 
 # Configure the client
 API_KEY = "your-api-key"  # Replace with your API key
-BASE_URL = "https://moderationapi.com/api/v1"
+BASE_URL = "https://api.moderationapi.com/v1"
 headers = {
     "Authorization": f"Bearer {API_KEY}",
     "Content-Type": "application/json"
@@ -61,7 +61,7 @@ import requests
 
 # Configure the client
 API_KEY = "your-api-key"  # Replace with your API key
-BASE_URL = "https://moderationapi.com/api/v1"
+BASE_URL = "https://api.moderationapi.com/v1"
 headers = {
     "Authorization": f"Bearer {API_KEY}",
     "Content-Type": "application/json"
@@ -96,7 +96,7 @@ import requests
 
 # Configure the client
 API_KEY = "your-api-key"  # Replace with your API key
-BASE_URL = "https://moderationapi.com/api/v1"
+BASE_URL = "https://api.moderationapi.com/v1"
 headers = {
     "Authorization": f"Bearer {API_KEY}",
     "Content-Type": "application/json"
