--- a/review-queues/configuration.mdx
+++ b/review-queues/configuration.mdx
@@ -3,7 +3,7 @@ title: "Configuring review queues"
 sidebarTitle: "Configuring queues"
 ---
 
-To create a new queue you can press the plus button in side bar on the queue dashboard or simply [create a new queue here](https://moderationapi.com/app/moderation/new).
+To create a new queue you can press the plus button in side bar on the queue dashboard or simply [create a new queue here](https://dash.moderationapi.com/moderation/new).
 
 <Note>Feel free to edit the default queue if it doesn't match your needs.</Note>
 
