--- a/review-queues/inviting-moderators.mdx
+++ b/review-queues/inviting-moderators.mdx
@@ -16,7 +16,7 @@ You can invite as many moderators to your as you want.
 
 To invite moderators, go to the **Team** page in the sidebar and click on the **Invite moderators** button. You'll be asked to enter their email address and to select the queues they'll be moderating.
 
-[Invite moderators](https://moderationapi.com/app/moderation/team)
+[Invite moderators](https://dash.moderationapi.com/moderation/team)
 
 Moderators will receive an email with a link to accept your invitation. Once they accept it, they'll be able to log in to your dashboard and start moderating your content.
 
@@ -24,7 +24,7 @@ Moderators will receive an email with a link to accept your invitation. Once the
 
 To remove a moderator, go to the **Team** page in the sidebar and click on the **Remove** button next to their name.
 
-[Remove moderators](https://moderationapi.com/app/moderation/team)
+[Remove moderators](https://dash.moderationapi.com/moderation/team)
 
 ## On demand moderation
 
