--- a/users/updating-authors.mdx
+++ b/users/updating-authors.mdx
@@ -160,7 +160,7 @@ Here's a complete example of updating an author with all available fields:
 </Tab>
   <Tab title="Dashboard">
 
-Navigate to the [Authors section](https://moderationapi.com/app/users) in your project dashboard to update author details through the web interface.
+Navigate to the [Authors section](https://dash.moderationapi.com/users) in your project dashboard to update author details through the web interface.
 
 </Tab>
 
