--- a/account/upgrading.mdx
+++ b/account/upgrading.mdx
@@ -7,7 +7,7 @@ If you need more quota or features, you can upgrade your plan at any time. Addit
 
 ## How to change plan
 
-Visit the [billing page](https://moderationapi.com/app/billing) and click on the "Manage billing" button. You will be redirected to the billing portal.<br></br>
+Visit the [billing page](https://dash.moderationapi.com/billing) and click on the "Manage billing" button. You will be redirected to the billing portal.<br></br>
 
 Here you can:
 
