--- a/api-reference/rate-limits.mdx
+++ b/api-reference/rate-limits.mdx
@@ -13,6 +13,6 @@ A basic technique for integrations to gracefully handle limiting is to watch for
 
 ## Checking your rate limit
 
-You can check your current rate limit in your [dashboard under usage](https://moderationapi.com/app/usage).
+You can check your current rate limit in your [dashboard under usage](https://dash.moderationapi.com/usage).
 
-You might also want to check what your peak usage is for a given time period. You can do in the [analytics page](https://moderationapi.com/app/analytics) in your dashboard. Check the Peak RPM chart. This is useful to see if you are close to hitting your rate limit.
+You might also want to check what your peak usage is for a given time period. You can do in the [analytics page](https://dash.moderationapi.com/analytics) in your dashboard. Check the Peak RPM chart. This is useful to see if you are close to hitting your rate limit.
