--- a/quickstart/php.mdx
+++ b/quickstart/php.mdx
@@ -17,7 +17,7 @@ We currently don't have an official SDK for PHP, but you can use the [OpenAPI Ge
 
 ## 2. Submit content
 
-Grab the API key from your [project](https://moderationapi.com/app) and begin submitting text, images, or other media to your project for moderation.
+Grab the API key from your [project](https://dash.moderationapi.com) and begin submitting text, images, or other media to your project for moderation.
 
 <CodeGroup>
 
@@ -25,7 +25,7 @@ Grab the API key from your [project](https://moderationapi.com/app) and begin su
 <?php
 // Configure the client
 $API_KEY = "your-api-key"; // Replace with your API key
-$BASE_URL = "https://moderationapi.com/api/v1";
+$BASE_URL = "https://api.moderationapi.com/v1";
 
 // Text moderation
 $data = array(
@@ -64,7 +64,7 @@ if ($text_analysis['flagged']) {
 <?php
 // Configure the client
 $API_KEY = "your-api-key"; // Replace with your API key
-$BASE_URL = "https://moderationapi.com/api/v1";
+$BASE_URL = "https://api.moderationapi.com/v1";
 
 // Image moderation
 $data = array(
@@ -103,7 +103,7 @@ if ($image_analysis['flagged']) {
 <?php
 // Configure the client
 $API_KEY = "your-api-key"; // Replace with your API key
-$BASE_URL = "https://moderationapi.com/api/v1";
+$BASE_URL = "https://api.moderationapi.com/v1";
 
 // Object moderation
 $data = array(
