--- a/users/actions.mdx
+++ b/users/actions.mdx
@@ -12,7 +12,7 @@ Common scenarios for moderation actions:
 - **Remove spam accounts** posting promotional content repeatedly
 - **Suspend users** to send clear signals about acceptable behavior
 
-Actions can be executed manually from the [user dashboard](https://moderationapi.com/app/users) or programmatically via the [Author API](/api-reference/author). They complement content moderation by addressing the user behind the content, helping you stop persistent abuse and enforce community standards.
+Actions can be executed manually from the [user dashboard](https://dash.moderationapi.com/users) or programmatically via the [Author API](/api-reference/author). They complement content moderation by addressing the user behind the content, helping you stop persistent abuse and enforce community standards.
 
 ## Built-in actions
 
@@ -105,7 +105,7 @@ To create custom actions, choose "Author level action" when creating a new actio
 <Tabs>
   <Tab title="Dashboard">
 
-1. Navigate to the user detail page in the [user dashboard](https://moderationapi.com/app/users)
+1. Navigate to the user detail page in the [user dashboard](https://dash.moderationapi.com/users)
 2. Select the appropriate action (Block, Suspend, or Enable)
 3. Choose from predefined reason options or select "Other" for free text
 4. For suspensions: select duration from dropdown or set custom end time
@@ -142,47 +142,56 @@ This timeline helps moderators understand user history and make informed decisio
 
 ```javascript
 // Block a user permanently
-const blockResponse = await fetch("/api/v1/actions/execute", {
-  method: "POST",
-  headers: { 
-    "Authorization": "Bearer YOUR_API_KEY",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    actionKey: "AUTHOR_BLOCK",
-    authorIds: ["{authorId}"],
-    value: "Repeated spam violations"
-  }),
-});
+const blockResponse = await fetch(
+  "https://api.moderationapi.com/v1/actions/execute",
+  {
+    method: "POST",
+    headers: {
+      Authorization: "Bearer YOUR_API_KEY",
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      actionKey: "AUTHOR_BLOCK",
+      authorIds: ["{authorId}"],
+      value: "Repeated spam violations",
+    }),
+  }
+);
 
 // Suspend a user temporarily
-const suspendResponse = await fetch("/api/v1/actions/execute", {
-  method: "POST", 
-  headers: { 
-    "Authorization": "Bearer YOUR_API_KEY",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    actionKey: "AUTHOR_BLOCK_TEMP", 
-    authorIds: ["{authorId}"],
-    value: "Harassment of other users",
-    duration: 7 * 24 * 60 * 60 * 1000 // 7 days in milliseconds
-  }),
-});
+const suspendResponse = await fetch(
+  "https://api.moderationapi.com/v1/actions/execute",
+  {
+    method: "POST",
+    headers: {
+      Authorization: "Bearer YOUR_API_KEY",
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      actionKey: "AUTHOR_BLOCK_TEMP",
+      authorIds: ["{authorId}"],
+      value: "Harassment of other users",
+      duration: 7 * 24 * 60 * 60 * 1000, // 7 days in milliseconds
+    }),
+  }
+);
 
 // Unblock a user (remove block/suspension)
-const unblockResponse = await fetch("/api/v1/actions/execute", {
-  method: "POST",
-  headers: { 
-    "Authorization": "Bearer YOUR_API_KEY",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    actionKey: "AUTHOR_UNBLOCK",
-    authorIds: ["{authorId}"],
-    value: "Appeal approved"
-  }),
-});
+const unblockResponse = await fetch(
+  "https://api.moderationapi.com/v1/actions/execute",
+  {
+    method: "POST",
+    headers: {
+      Authorization: "Bearer YOUR_API_KEY",
+      "Content-Type": "application/json",
+    },
+    body: JSON.stringify({
+      actionKey: "AUTHOR_UNBLOCK",
+      authorIds: ["{authorId}"],
+      value: "Appeal approved",
+    }),
+  }
+);
 ```
 
 See the [Author API documentation](/api-reference/author) for complete endpoint details.
